--- a/Suaah/Areas/Admin/Views/Flights/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Flights/Index.cshtml
@@ -36,7 +36,7 @@
             <label class="control-label">From</label>
         </div>
         <div class="col-2">
-            <input name="conf" class="form-control" value="@ViewBag.conf" />
+            <input name="conf" list="names" class="form-control" value="@ViewBag.conf" />
         </div>
 
         <input name="ordersort" id="ord" value="@ViewBag.ordersort" hidden />
@@ -45,6 +45,12 @@
 
 
     </div>
+    <datalist id="names">
+        @foreach(string name in ViewBag.names)
+        {
+            <option>@name</option>
+        }
+    </datalist>
     <div class="row">
 
         <div class="col-1">
@@ -65,7 +71,7 @@
             <label class="control-label">To</label>
         </div>
         <div class="col-2">
-            <input name="cont" class="form-control" value="@ViewBag.cont" />
+            <input name="cont" class="form-control" list="names" value="@ViewBag.cont" />
         </div>
 
         <div class="col-1">
