--- a/Suaah/Areas/Admin/Views/Countries/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Details.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<Airport> airports = ViewBag.airports;
+
 }
 
 <h1>Details</h1>
@@ -25,6 +27,48 @@
         </dd>
     </dl>
 </div>
+@if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
+{
+    <h1 style="text-align:center; margin-top:20px; ">Airports</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                        Name
+                </th>
+                <th>
+                        Country
+                </th>
+                <th>
+                   Description
+    </th>
+    <th>
+            City
+    </th>
+    </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in airports)
+        {
+            <tr>
+                <td>
+                    @item.Name
+                </td>
+                <td>
+                    @item.Country.Name
+                </td>
+                <td>
+                    @item.Description
+                </td>
+                <td>
+                    @item.City
+                </td>
+                
+            </tr>
+        }
+    </tbody>
+    </table>
+}
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
