--- a/Suaah/Areas/Admin/Views/Customers/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Customers/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    List<FlightBookingDetails> flights = ViewBag.flights;
 }
 
 <h1>Details</h1>
@@ -61,6 +62,73 @@
 
     </dl>
 </div>
+    <h1 style="text-align:center; margin-top:20px;">Flights Booked</h1>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+
+            </th>
+            <th>
+                From
+            </th>
+            <th>
+               To
+            </th>
+            <th>
+                Total Price
+            </th>
+            <th>
+                Class
+            </th>
+            <th>
+                Number of Seats
+            </th>
+             <th>
+                Airline
+            </th>
+            <th>
+                LeaveTime
+            </th>
+            <th>
+                Order number
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in flights) {
+        <tr>
+            <td style="width:12%">
+               <img src="@item.Flight.ArrivingAirport.Country.PhotoPath" class="img-fluid img-thumbnail">
+            </td>
+            <td>
+                @item.Flight.DepartingAirport.Name ,@item.Flight.DepartingAirport.City ,@item.Flight.DepartingAirport.Country.Name
+            </td>
+             <td>
+               @item.Flight.ArrivingAirport.Name ,@item.Flight.ArrivingAirport.City ,@item.Flight.ArrivingAirport.Country.Name
+            </td>
+            <td>
+                @item.TotalPrice
+            </td>
+            <td>
+                <p>@item.FlightClass.Class</p>
+                <p>Price:@item.Flight.FlightClasses.FirstOrDefault(f=>f.FlightClassId==item.FlightClassId).Price $</p>
+            </td>
+            <td>
+                @item.Flight.Airline.Name
+            </td>
+            <td>
+                @item.Flight.LeaveTime
+            </td>
+            <td>
+                @item.OrderID
+            </td>
+
+        </tr>
+}
+    </tbody>
+</table>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
 
